2012-06-27  Karl Berry  <karl@tug.org>

	* texmfmp.c (generic_synctex_get_current_name): return the
	empty string if passed null (can happen with -ini).

2012-06-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (open_{in,out}_or_pipe): Use popen() modes "rb" and
	"wb" only for Windows, Posix allows them only for fopen().
	(This makes pdftex's \input"|..." feature work again,
	unintentionally broken.)
	tex-live mail, 26 Jun 2012 06:24:11.

2012-05-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* printversion.c (printversionandexit): Update 'Copyright 2012'.

2012-04-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (mk_shellcmdlist, init_shell_escape,
	shell_cmd_is_allowed, normalize_quotes): Declare as static.
	(get_seconds_and_micros): Define only for pdfTeX.
	(getrandomseed): Removed, MP only.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* texmfmp.c (input_line): Cast buffer to 'unsigned char *'.

2012-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eofeoln.c (eof): Fix a typo in comment.

2012-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* printversion.c, texmfmp.c: Drop report of file offset bits.

2012-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lib.h, printversion.c, texmfmp.c: Report file offset bits.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* setupvar.c (setupboundvariable): Warning message: the bad
	value can be from the environment or from texmf.cnf.

2011-10-11  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Slightly reformulate Byte order marks.

2011-10-07  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c: More changes to reduce diffs with W32TeX.

2011-10-04  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c: More changes to reduce diffs with W32TeX,
	for compilation with MS Visual Studio 2005.

2011-10-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c : remove unused free_shellcmdlist()
